[workspace]
members = [
    "contracts"
]
resolver = "2"

[workspace.dependencies]
alloy-primitives = "0.3.1"
alloy-sol-types = "0.3.1"
mini-alloc = "0.4.2"
stylus-sdk = "0.5.0"
hex = "0.4.3"

[profile.release]
codegen-units = 1        # prefer efficiency to compile time
panic = "abort"          # use simple panics
strip = true             # remove debug info
lto = true               # link time optimization
debug = false            # no debug data
rpath = false            # no run-time search path
debug-assertions = false # prune debug assertions
incremental = false      # no incremental builds

[profile.binary-profiling]
inherits = "dev"
codegen-units = 1   # prefer efficiency to compile time
panic = "abort"     # use simple panics
opt-level = 3       # optimize for performance (default for most contracts)
lto = true          # link time optimization
rpath = false       # no run-time search path
incremental = false # no incremental builds
