[package]
name = "scripts"
version = "0.1.0"
edition = "2021"
license = "GNU-GPLv3"
homepage = "https://github.com/frak-id/contracts-stylus"
repository = "https://github.com/frak-id/contracts-stylus"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "77458dd", features = [
    "sol-types",
    "network",
    "providers",
    "provider-http",
    "signers",
    "signer-wallet",
    "transports",
    "transport-http",
    "rpc-client",
    "rpc-types-eth"
] }
alloy-rlp = { git = "https://github.com/alloy-rs/rlp", rev = "b070e82" }
ethers = "2.0"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.4.7", features = ["derive"] }
json = "0.12"
reqwest = "0.12.4"
log = "0.4.21"


