[package]
name = "scripts"
version = "0.1.0"
edition = "2021"
license = "GNU-GPLv3"
homepage = "https://github.com/frak-id/contracts-stylus"
repository = "https://github.com/frak-id/contracts-stylus"

[dependencies]
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "77458dd", features = [
    "sol-types",
    "network",
    "providers",
    "provider-http",
    "signers",
    "signer-wallet",
    "transports",
    "transport-http",
    "rpc-client",
    "rpc-types-eth",
    "rand"
] }
alloy-rlp = { git = "https://github.com/alloy-rs/rlp", rev = "b070e82" }
ethers = "2.0"
tokio = { version = "1.12.0", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
clap = { version = "4.4.7", features = ["derive"] }
json = "0.12"
reqwest = "0.12.4"
log = "0.4.21"
dotenv = "0.15.0"

# Not in global workspace, to prevent clash with stylus contracts
[workspace]
